# adp-sync

./: .gitignore  README.md  extract.py  pyproject.toml  requirements.txt  workers_update.py
.github/workflows/: codeql-analysis.yml
adp_sync/: adp.py  extract.py  wfm_extract.py  workers_update.py
tests/: test_adp_sync.py
