[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com"},
]
dependencies = [
    "python-dotenv>=0.19.2",
    "requests>=2.27.1",
    "google-cloud-storage>=1.44.0",
    "oauthlib>=3.1.1",
    "requests-oauthlib>=1.3.0",
    "pyyaml>=6.0"]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=21.12b0",
    "pytest>=6.2.5",
    "flake8>=4.0.1",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
