[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com"},
]
license-expression = "MIT"
dependencies = [
    "requests>=2.27.1",
    "google-cloud-storage>=2.2.1",
    "oauthlib>=3.2.0",
    "requests-oauthlib>=1.3.1",
    "pyyaml>=6.0"]
requires-python = ">=3.9"

[project.urls]
Homepage = ""

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.1.0",
    "pytest>=7.1.0",
    "flake8>=4.0.1",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
extract-workers.cmd = "python adp_sync/extract.py"
extract-workers.env_file = ".env"
update-workers.cmd = "python adp_sync/workers_update.py"
update-workers.env_file = ".env"
extract-wfm.cmd = "python adp_sync/wfm_extract.py"
extract-wfm.env_file = ".env"
